<?xml version="1.0"?>
<package>
 <name>vl6180_pub</name>
   <version>0.0.0</version>
  <description>The vl6180_pub package</description>
  <maintainer email="muntahi@todo.todo">muntahi</maintainer>
    <license>TODO</license>
 ...

 <buildtool_depend>catkin</buildtool_depend>

 <build_depend>my_other_package</build_depend>
 <build_depend>geometry_msgs</build_depend>
 <build_depend>genmsgs</build_depend>
 <build_depend>roscpp</build_depend>
 <build_depend>std_msgs</build_depend>
 <build_depend>std_msgs_msgs</build_depend>
 ...
 <build_depend>message_generation</build_depend>

 <run_depend>my_other_package</run_depend>
 <run_depend>geometry_msgs</run_depend>
 <run_depend>genmsgs</run_depend>
 <run_depend>roscpp</run_depend>
 <run_depend>std_msgs_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
 ...
 <run_depend>message_runtime</run_depend>

 <export/>
</package>
